<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailFragment">

        <EditText
            android:layout_marginTop="64dp"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{shoeData.name}"
            android:hint="@string/hint_name" />

        <EditText
            android:id="@+id/size"
            android:hint="@string/hint_size"
            android:text="@{Double.toString(shoeData.size)}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/company"
            android:hint="@string/hint_company"
            android:text="@{shoeData.company}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/description"
            android:hint="@string/hint_description"
            android:text="@{shoeData.description}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btn_add"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</layout>